try to fix border-radius on safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -883,11 +883,11 @@ section {
   margin: 20px 0 15px 25px;
   width: 350px;
   height: 180px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
   border-radius: 15px;
   box-shadow: 0 0 20px var(--additional-color);
   overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
+  mask-image: -webkit-radial-gradient(white, black);
 }
 
 .production__image {
